# midas-journal-202

Parameterization/: CMakeLists.txt  itkQuadEdgeMeshLinearParameterizationTest.cxx  itk_parameterization.kilepr
Parameterization/data/: mushroom.vtk
Parameterization/doc/: main.tex  parameterization_biblio.bib
Parameterization/doc/fig/: .directory  Diagram1.dia
Parameterization/doc/fig/.svn/: entries
Parameterization/doc/fig/.svn/text-base/: Diagram1.png.svn-base  angle.fig.svn-base
__MACOSX/: ._Parameterization
__MACOSX/Parameterization/: ._CMakeLists.txt  ._VNLIterativeSparseSolverTraits.h  ._data  ._doc  ._itkCrossHelper.h  ._itkQuadEdgeMeshBorderTransform.h  ._itkQuadEdgeMeshBorderTransform.txx  ._itkQuadEdgeMeshLinearParameterizationTest.cxx  ._itkQuadEdgeMeshParam.h  ._itkQuadEdgeMeshParam.txx  ._itkQuadEdgeMeshParamMatrixCoefficients.h  ._itkTriangleHelper.h  ._itk_parameterization.kilepr
__MACOSX/Parameterization/data/: ._mushroom.vtk
__MACOSX/Parameterization/doc/: ._InsightArticle.cls  ._InsightJournal.sty  ._fig  ._main.tex  ._parameterization_biblio.bib
__MACOSX/Parameterization/doc/fig/: ._.directory  ._.svn  ._Diagram1.dia  ._angle.fig
__MACOSX/Parameterization/doc/fig/.svn/: ._entries  ._format  ._prop-base  ._props  ._text-base  ._tmp
__MACOSX/Parameterization/doc/fig/.svn/prop-base/: ._Diagram1.dia.svn-base  ._Diagram1.png.svn-base  ._angle.fig.svn-base  ._param.png.svn-base
__MACOSX/Parameterization/doc/fig/.svn/text-base/: ._Diagram1.dia.svn-base  ._Diagram1.png.svn-base  ._angle.fig.svn-base  ._param.png.svn-base
(+3 files in other folders)
